test/files/neg/t512.check
t512.scala:3: error: not found: value something
    val xxx = something ||
              ^
t512.scala:4: error: not found: value something_else
        something_else;
        ^
two errors found
